--- a/README
+++ b/README
@@ -1,1 +1,14 @@
 ###
+###
+###
+
+Apply this patch from within src/pacman
+
+###
+###
+
+To enable, add 'ILovePavis' to a ine by itself in pacman.conf
+
+###
+###
+###
