--- a/README
+++ b/README
@@ -1,14 +1,54 @@
-###
-###
-###
+
 
 Apply this patch from within src/pacman
 
-###
-###
 
-To enable, add 'ILovePavis' to a ine by itself in pacman.conf
 
-###
-###
-###
+To enable, add 'ILovePanis' to a ine by itself in pacman.conf
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
