--- a/README
+++ b/README
@@ -4,51 +4,8 @@ Apply this patch from within src/pacman
 
 
 
-To enable, add 'ILovePanis' to a ine by itself in pacman.conf
+To enable, add 'ILovePanis' to a line by itself in pacman.conf
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+And for the record, I don't LovePanis
