--- a/README
+++ b/README
@@ -1,11 +1,5 @@
-
+Here it is, by request!
 
 Apply this patch from within src/pacman
-
-
-
 To enable, add 'ILovePanis' to a line by itself in pacman.conf
-
-
-
 And for the record, I don't LovePanis
