Still working with pacman-git as of 22-Jan-2011

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Here it is, by request!
 
-Patch tested against 3.4.0 and 3.4.1
+Patch tested against 3.4.0 through 3.4.2
+
+Works with current pacman-git, as of 22-Jan-2011
 
 Apply this patch from within src/pacman
 (from within src/pacman-3.4.0/src/pacman if using PKGBUILD)
